[package]
name = "zip_in_png"
version = "0.1.0"
authors = ["Patrick Amrein <amrein@ubique.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crc-any = "2.3.5"
zip = {version = "0.5.8", default-features = false, features = ["deflate"]}
clap = "2.33.3"